--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,10 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "scripts": {
+    "deploy": "firebase deploy --only functions",
+    "start": "firebase serve --only functions"
+  },
   "dependencies": {
     "firebase-admin": "~4.2.1",
     "firebase-functions": "^0.5.9"
