--- a/functions/package.json
+++ b/functions/package.json
@@ -6,8 +6,8 @@
     "start": "firebase serve --only functions"
   },
   "dependencies": {
-    "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.9"
+    "firebase-admin": "^6.5.0",
+    "firebase-functions": "^2.1.0"
   },
   "private": true
 }
