--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/functions/node_modules
+/public/.vs
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +48,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/functions/trend-buddy-firebase-adminsdk-ymhg3-c65d28fe1d.json
+/.vs
