--- a/functions/package.json
+++ b/functions/package.json
@@ -9,5 +9,8 @@
     "firebase-admin": "^6.5.0",
     "firebase-functions": "^2.1.0"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
