--- a/.gitignore
+++ b/.gitignore
@@ -45,13 +45,14 @@ $RECYCLE.BIN/
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
+.apdisk
+.firebase
 Network Trash Folder
 Temporary Items
-.apdisk
-/functions/trend-buddy-firebase-adminsdk-ymhg3-c65d28fe1d.json
 /.vs
-/functions/package-lock.json
 /package-lock.json
-public/.vs/public
-.firebase
 public/.vs/public/v15/.suo
+public/.vs/public
+/functions/trend-buddy-firebase-adminsdk-ymhg3-c65d28fe1d.json
+/functions/package-lock.json
+/functions/node_modules
