--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "firebase-admin": "^8.9.1",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "node-fetch": "^2.6.0"
   },
   "private": true,
   "engines": {
